--- a/templates/index.html
+++ b/templates/index.html
@@ -27,22 +27,22 @@
     <div class="form-row">
       <label for="to">
         Number to compliment
-        <input type="tel" placeholder="+15550123456" name="to" />
+        <input type="tel" placeholder="+7218566898" name="to" />
       </label>
       <label for="sender">
         Your Name
-        <input type="text" placeholder="Jane" name="sender"  />
+        <input type="text" placeholder="Nancy" name="sender"  />
       </label>
     </div>
     <div class="form-row">
       <label for="receiver">
         Person to compliment
-        <input type="text" placeholder="Sally" name="receiver" />
+        <input type="text" placeholder="Lisa" name="receiver" />
       </label>
       <span class="float-text">is</span>
       <label for="compliment">
         Your compliment
-        <input type="text" placeholder="an amazing person!" name="compliment" />
+        <input type="text" placeholder="Your are such cute !" name="compliment" />
       </label>
     </div>
 </form>
